# Agora

./: .gitignore  Cargo.toml  README.md  generate.mjs  package-lock.json  package.json  para-state  para-wasm  plain_chain_spec.json  raw_chain_spec.json  rust-toolchain.toml  test_ocw.js  zombienet-simple.toml  zombienet-xcm.toml  zombienet.toml
JS/: checkBalence.js  debug.js  fix_sovereign_and_send_job.js  fund_test_accounts.js  rev.js  setup-hrmp.js
node/: Cargo.toml
pallets/agora/: Cargo.toml
pallets/agora/src/: error_wrapper.rs  functions.rs  lib.rs  ocw.rs  tests.rs  types.rs  weights.rs  xcm_hander.rs  xcm_handler.rs  xcm_job_client.rs
pallets/template/: Cargo.toml
pallets/xcm-job-client/: Cargo.toml  README.md
pallets/xcm-job-client/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: xcm_config.rs
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Dashboard.tsx  NotFound.tsx  Settings.tsx
ui/src/components/common/: AccountSelector.tsx  BalanceDisplay.tsx  ChainStatus.tsx  ConnectButton.tsx  HashGenerator.tsx
ui/src/components/jobs/: JobCard.tsx  JobDetail.tsx  JobList.tsx  SubmitJobForm.tsx
ui/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
ui/src/components/workers/: CommitRevealInterface.tsx  WorkerDashboard.tsx
ui/src/context/: AccountContext.tsx  ApiContext.tsx
ui/src/hooks/: useAccount.ts  useApi.ts  useEvents.ts  useJobs.ts  useWorkers.ts
ui/src/types/: index.ts
ui/src/utils/: api.ts  constants.ts  formatters.ts  helpers.ts  signer.ts
