[package]
name = "pallet-agora"
description = "Agora: A verifiable computation marketplace pallet"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
sp-core = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

[dev-dependencies]
sp-io = { version = "38.0.0", default-features = true }
pallet-balances = { version = "41.1.0", default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame/std",
    "sp-core/std",
    "sp-std/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "staging-xcm/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
]