[package]
name = "pallet-agora"
description = "Agora: A verifiable computation marketplace pallet"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
log = { workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
staging-xcm = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame/std",
    "sp-core/std",
    "sp-std/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "staging-xcm/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
    "pallet-balances/try-runtime",
]